# ugokuna

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: encoder.rs  illust.rs  main.rs  save.rs  ugoira.rs
src/pixiv/: client.rs  error.rs  mod.rs  response.rs  types.rs
