[package]
name = "ugokuna"
version = "0.1.0"
edition = "2021"
authors = ["hdk5 <hdk5@hdk5.xyz>"]
license = "MIT"
categories = ["command-line-utilities", "multimedia"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-stream = "0.3.3"
bytes = "1.1.0"
clap = { version = "3.1.12", features = ["derive"] }
derive_more = "0.99.17"
fraction = "0.10.0"
futures = "0.3.19"
lazy_static = "1.4.0"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
reqwest = { version = "0.11.10", features = ["json", "stream", "cookies"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["full"] }
zip = "0.6.2"
